--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
                 <hr>
                 <!-- start button that shows when page is loaded and then disappears after pressed -->
                 <button id="startButton" type="button" class="btn btn-success btn-lg">START</button>
-                <button id="showTimer" type="button" class="btn btn-danger">
-                    <h2>90<h2</h2> </button> </div> </div> </div> <!-- container holding questions and answer options-->
+                <button id="showTimer" type="button" class="btn btn-danger"><h2>90<h2</h2> </button> 
+            </div> 
+        </div> 
+    </div> 
+    <!-- container holding questions and answer options-->
                             <div class="container text-center">
                                 <div class="row">
                                     <div class="col-md-12">
